syntax="proto3";

package raftpb;

service Raft {
    rpc AppendEntries(AppendEntriesArgs) returns(AppendEntriesReply){}
    rpc RequestVotes(RequestVotesArgs) returns(RequestVotesReply){}
}

enum EntryType {
    Normal = 0;
    Config = 1;
}

message Entry {
    EntryType Type = 1;
    uint64 Term = 2;
    uint64 Index = 3;
    bytes Data = 4;
}

message AppendEntriesArgs {
    uint64 Term = 1;
    uint64 LeaderID = 2;
    uint64 PrevLogIndex = 3;
    uint64 PrevLogTerm = 4;
    repeated Entry Entries = 5;
    uint64 LeaderCommit = 6;
}

message AppendEntriesReply {
    uint64 Term = 1;
    bool Success = 2;
}

message RequestVotesArgs {
    uint64 Term = 1;
    uint64 CandidateID = 2;
    uint64 LastLogIndex = 3;
    uint64 LastLogTerm = 4;
}

message RequestVotesReply {
    uint64 Term = 1;
    bool VoteGranted = 2;
}
